<resources>
    <string name="app_name">DPMJInfo</string>
    <string name="no_items_found">No items found</string>
    <string name="nameLabel">Name:</string>
    <string name="bus_stop_detail_lines_label">Lines:</string>
    <string name="wheelchair_accessible_label">Barrier-free:</string>
    <string name="bus_stop_detail_actual_actual_departures">Actual departures:</string>
    <string name="bus_stop_detail_loading_label">Loading departures</string>
    <string name="download_button_text">Download</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="map_cancel_filter">Cancel filter</string>
    <string name="map_filter_button_text">Filter</string>
    <string name="map_functionality_description">Map displays position of Jihlava public transportation vehicles. Tap vehicle icon to display further info and eventual delay. Stops are displayed after zooming in enough. After tapping a stop details are displayed including actual departures.</string>
    <string name="bus">bus</string>
    <string name="trolleybus">trolleybus</string>
    <string name="waiting_vehicle">waiting vehicle</string>
    <string name="created">Developed in cooperation with\nDopravní podnik města Jihlavy a.s.\nand\nIT department of\nStatutory town Jihlava</string>
    <string name="search_for">Search:</string>
    <string name="schedule_download_required_text">Download of schedule definition is required</string>
    <string name="search_button_text">Search</string>
    <string name="vehicle_detail_line_label">Line:</string>
    <string name="vehicle_detail_terminal_label">Terminal:</string>
    <string name="vehicle_detail_last_stop">Last stop:</string>
    <string name="vehicle_detail_delay">Delay:</string>
    <string name="departure_query_stop_label">Stop:</string>
    <string name="departure_query_loading_stops">Loading stops</string>
    <string name="departure_query_time_label">Time:</string>
    <string name="departure_query_date_label">Date:</string>
    <string name="connection_query_start_stop_label">From stop:</string>
    <string name="connection_query_target_stop_label">To stop:</string>
    <string name="map_object_selection_image_contentDescription">Object type</string>
    <string name="vehicle_detail_title">Vehicle detail</string>
    <string name="vehicle_detail_time_to_departure_label">Time to departure:</string>
    <string name="vehicle_detail_without_delay">no delay</string>
    <string name="map_icon_title">Map</string>
    <string name="percent">%1$d %%</string>
    <string name="download_progress">File %1$d/%2$d</string>
    <string name="actual_departures_title">Actual departures</string>
    <string name="bus_stop_detail_title">Stop detail</string>
    <string name="connection_query_title">Connections</string>
    <string name="departure_query_title">Departures</string>
    <string name="departure_query_all_lines">All lines"</string>
    <string name="download_activity_title">Download</string>
    <string name="connection_detail_query_title">Connection detail</string>
    <string name="map_object_selection_title">Object selection</string>
    <string name="no_internet_connection_alert_title">Connection error</string>
    <string name="no_internet_connection_alert_message">No internet connection available</string>
    <string name="map_no_internet_connection_alert_message">Online public transportation map requires internet connection in order to function properly</string>
    <string name="download_error_alert_title">Download error</string>
    <string name="no_internet_connection_ok_button_text">OK</string>
    <string name="download_error_alert_message">Error occurred during download</string>
    <string name="update_available_alert_message">New schedule definition update is available. Download now?</string>
    <string name="map_update_available_alert_message">New base map update is available. Download now?</string>
    <string name="update_available_alert_title">Update</string>
    <string name="update_available_alert_ok_button_text">Download</string>
    <string name="update_available_alert_cancel_button_text">Not now</string>
    <string name="title_activity_settings">Settings</string>

    <string name="base_map_setting_title">Offline base map</string>
    <string name="base_map_setting_summary">Use map saved in local storage?</string>

    <string name="error_alert_title">Error</string>
    <string name="map_no_base_map_file_alert_message">No base map file is available</string>

    <string name="refresh_button_text">Refresh</string>

    <string name="base_map_delete_alert_title">Delete map?</string>
    <string name="base_map_delete_alert_message">Do you really wish to delete downloaded base map?</string>
    <string name="base_map_delete_alert_positive_button">Yes</string>
    <string name="base_map_delete_alert_negative_button">No</string>

    <string name="schedules_are_actual_toast">Schedules are up-to-date</string>
    <string name="base_map_deleted_toast">Base map successfully deleted</string>
    <string name="base_map_delete_error_toast">Error occurred during base map deletion</string>

    <string name="favourite_delete_fail_toast">Error while deleting favourite</string>
    <string name="added_to_favourite_toast">Added to favourite</string>
    <string name="favourite_already_saved_toast">Favourite already saved</string>
    <string name="favourite_saving_error_toast">Error while saving favourite</string>

    <string name="articles_title">News</string>

    <string name="map_key_user_location_description">user location</string>
    <string name="map_location_loading">Loading position…</string>

    <string name="query_not_populated_toast">Query parameters not set</string>
</resources>
