<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BusStopDetailActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/nameLabel"
            android:text="@string/nameLabel"
            style="@style/labelTextView" />

        <TextView
            android:id="@+id/name"
            style="@style/valueTextView" />

        <TextView
            android:id="@+id/linesLabel"
            android:text="@string/bus_stop_detail_lines_label"
            style="@style/labelTextView" />

        <TextView
            android:id="@+id/lines"
            style="@style/valueTextView" />

        <TextView
            android:id="@+id/wheelchairAccessibleLabel"
            android:text="@string/wheelchair_accessible_label"
            style="@style/labelTextView" />

        <TextView
            android:id="@+id/wheelchairAccessible"
            style="@style/valueTextView" />

        <TextView
            android:id="@+id/departuresLabel"
            android:text="@string/bus_stop_detail_actual_actual_departures"
            style="@style/labelTextView" />

    </LinearLayout>

    <TextView
        android:id="@+id/noItemsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_items_found"
        style="@style/labelTextView"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/elpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminate="true"
        android:max="100"
        android:minWidth="120dp"
        android:minHeight="120dp"
        android:progress="1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"

        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/elpProgressBarLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/elpProgressBar"
        android:textAlignment="center"
        android:text="@string/bus_stop_detail_loading_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>